--- a/source/form.html
+++ b/source/form.html
@@ -292,5 +292,6 @@
     <div class="popup popup__overlay"></div>
 
     <script src="js/scripts.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
