--- a/source/index.html
+++ b/source/index.html
@@ -295,7 +295,9 @@
             <p class="contact__link">ул. Большая Конюшенная, 19/8</p>
           </div>
         </div>
-        <div class="contacts__map"></div>
+        <div class="contacts__map">
+          <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1998.6180397169198!2d30.3221247!3d59.93848!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1541435271930" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
       </section>
 
     </main>
