Moved picturefill in js/lib

--- a/source/form.html
+++ b/source/form.html
@@ -296,6 +296,6 @@
     <div class="popup popup__overlay"></div>
 
     <script src="js/scripts.js"></script>
-    <script src="js/picturefill.min.js"></script>
+    <script src="js/lib/picturefill.min.js"></script>
   </body>
 </html>
