--- a/source/index.html
+++ b/source/index.html
@@ -375,6 +375,6 @@
     </footer>
 
     <script src="js/scripts.min.js"></script>
-    <script src="js/picturefill.min.js"></script>
+    <script src="js/lib/picturefill.min.js"></script>
   </body>
 </html>
