--- a/source/photo.html
+++ b/source/photo.html
@@ -452,6 +452,6 @@
     </footer>
 
     <script src="js/scripts.js"></script>
-    <script src="js/picturefill.min.js"></script>
+    <script src="js/lib/picturefill.min.js"></script>
   </body>
 </html>
