Исправление замечания по Б5. Грубые ошибки методологии...

--- a/source/form.html
+++ b/source/form.html
@@ -192,14 +192,12 @@
 
             <div class="contest__send-form">
               <button class="button form__submit" type="submit">Отправить форму</button>
-              <p class="form__submit-note"><span class="form__submit-note--red">*</span> — обязательные <span class="form__submit-note--desktop">для заполнения</span> поля</p>
+              <p class="form__submit-note"><span class="form__note">*</span> — обязательные <span class="form__text-desktop">для заполнения</span> поля</p>
             </div>
-
-
 
         </form>
 
-      </section> <!-- page-content__contest -->
+      </section>
 
     </main>
 
